@@ -55,6 +55,13 @@ picking your way through this list.
 <pre>
 3.7.4.0                        unreleased
      * The Uploaders field in debian/control may be wrapped.     [5.6.3]
+     * Manual pages in locale-specific directories should use either the
+       legacy encoding for that directory or UTF-8.  Country names should
+       not be included in locale-specific manual page directories unless
+       indicating a significant difference in the language.  All
+       characters in the manual page source should be representable in the
+       legacy encoding for a locale even if the man page is encoded in
+       UTF-8.                                                    [12.1]
 3.7.3.0                        Dec 2007
      * Package version numbers may contain tildes, which sort before
        anything, even the end of a part.                         [5.6.12]
