@@ -1,5 +1,7 @@
 debian-policy (3.7.4.0) unstable; urgency=low
 
+  * Bug fix: "[AMENDMENT 11/02/2008] Manual page encoding", thanks to
+    Colin Watson                                             (Closes: #440420).
   * Bug fix: "support for wrapped Uploaders should now be mandatory"
                                                              (Closes: #431813).
   * Bug fix: "Examples of dpkg frontends should mention apt now", thanks
